test menu flottant pour afficher client sur liste compte

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -21,3 +21,12 @@ div#connexion{
 .perso-pill{
     padding: 1em;
 }
+
+/* menu fixed actions */
+
+.actionorga{
+    position: fixed;
+    top: 40%;
+    right: -5px;
+    box-shadow: 0 2px 5px rgba(156,160,171,0.25);
+}
